# agc-template-market-harmonyos-demos

./: README.md
BooksAndReferenceTemplate/BookRead/: README.md  build-profile.json5  oh-package.json5
BooksAndReferenceTemplate/BookRead/commons/parse/src/main/cpp/: CMakeLists.txt  napi_init.cpp
BooksAndReferenceTemplate/BookRead/commons/parse/src/main/cpp/constants/: constants.h
BooksAndReferenceTemplate/BookRead/commons/parse/src/main/cpp/entity/: catalog.cpp  catalog.h  chapter.cpp  chapter.h  manifest.cpp  manifest.h  metadata.cpp  metadata.h  page_rect.cpp  page_rect.h  render_entity.cpp  render_entity.h
BooksAndReferenceTemplate/BookRead/commons/parse/src/main/cpp/manager/: epub_manager.cpp  epub_manager.h
BooksAndReferenceTemplate/BookRead/commons/parse/src/main/cpp/parse/: epub_parser.cpp  epub_parser.h
BooksAndReferenceTemplate/BookRead/commons/parse/src/main/cpp/render/: page_render.cpp  page_render.h
BooksAndReferenceTemplate/BookRead/commons/parse/src/main/cpp/types/libparse/: Index.d.ts  oh-package.json5
BooksAndReferenceTemplate/BookRead/commons/parse/src/main/cpp/utils/: t_log.h  t_napi_helper.h  t_xml_reader.h
BusinessTemplate/EnterpriseRecruitment/: README.md  build-profile.json5
BusinessTemplate/OfficeAttendance/: README.md  build-profile.json5  oh-package.json5
CarsTemplate/CarBeautyCare/: README.md  build-profile.json5  oh-package.json5
EducationTemplate/SchoolLife/: README.md  build-profile.json5  code-linter.json5  oh-package.json5
FoodAndDrinkTemplate/Recipes/: README.md  (+4 more)
emptyability_with_clouddev/: README.md  build.gradle
(+4109 files in other folders)
